重排格式以适应github的显示

--- a/README
+++ b/README
@@ -1,13 +1,18 @@
-# -*-coding:utf-8; mode:org-*-
+webpy-samples
+=============
 
-* 适用于小型网站的示例
+一些简单的webpy使用示例，演示了实际项目中该如何使用webpy。
+
+
+适用于小型网站的示例
+-------------
 
 该示例演示了以下内容：
-- 使用MVC模式的项目结构
-- 使用nginx+uwsgi部署webpy应用
-- 定制404/502错误页面
-- 模板的使用
-- 数据库的使用
+* 使用MVC模式的项目结构
+* 使用nginx+uwsgi部署webpy应用
+* 定制404/502错误页面
+* 模板的使用
+* 数据库的使用
 
 以上内容基本覆盖了小型网站所需的全部技术。
 
